--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,4 +1,5 @@
 disabled_rules:
+  - trailing_comma
   - private_over_fileprivate
   - cyclomatic_complexity
   - function_body_length
@@ -54,7 +55,7 @@ opt_in_rules:
   - redundant_set_access_control
   - lower_acl_than_parent
   - explicit_acl
-  - explicit_type_interface
+  # - explicit_type_interface
 
 #included:
 #excluded:
@@ -109,7 +110,12 @@ nesting:
     - 5
   function_level: 2
 
-explicit_type_interface:
-  severity: warning
-  allow_redundancy: true
+opening_brace:
+  ignore_multiline_function_signatures: true
+  ignore_multiline_type_headers: true
+  ignore_multiline_statement_conditions: true
+
+# explicit_type_interface:
+#   severity: warning
+#   allow_redundancy: true
 
