--- a/.github/workflows/update-swiftlint.yml
+++ b/.github/workflows/update-swiftlint.yml
@@ -2,7 +2,7 @@ name: Update SwiftLint Dependency
 
 on:
   schedule:
-    - cron: '0 0 * * 1'  # Every Monday at 00:00 UTC
+    - cron: '0 0 * * *'  # Every Monday at 00:00 UTC
   workflow_dispatch:
 
 permissions:
