--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,121 +1,42 @@
-disabled_rules:
-  - trailing_comma
-  - private_over_fileprivate
-  - cyclomatic_complexity
-  - function_body_length
-  - redundant_string_enum_value
-  - todo
-  - mark
-#  - colon
-#  - comma
-#  - control_statement
+excluded:
+  - Carthage
+  - .git
+  - .build
 
 opt_in_rules:
-  - yoda_condition
-  - xct_specific_matcher
-  - weak_delegate
-  - untyped_error_in_catch
-#  - unused_import
-  - unavailable_function
-  - unneeded_parentheses_in_closure_argument
-  - toggle_bool
-  - operator_usage_whitespace
-  - nslocalizedstring_key
-# - no_grouping_extension
-# - number_separator
-# - missing_docs
-  - multiline_arguments
-  - multiline_arguments_brackets
-  - multiline_function_chains
-# - multiline_literal_brackets
-  - multiline_parameters
-  - multiline_parameters_brackets
-# - legacy_objc_type
-  - identical_operands
-  - function_default_parameter_at_end
   - force_unwrapping
-  - flatmap_over_map_reduce
-  - file_name_no_space
-  - fatal_error_message
-  - fallthrough
-  - explicit_enum_raw_value
-  - explicit_init
-  - empty_xctest_method
-  - empty_count
-  - empty_string
-  - empty_collection_literal
-  - discouraged_object_literal
-  - convenience_type
-  - comma_inheritance
-  - collection_alignment
-  - closure_spacing
-  - attributes
-  - array_init
   - indentation_width
-  - redundant_set_access_control
-  - lower_acl_than_parent
+  - sorted_imports
+  # - missing_docs
+  - convenience_type
+  - multiline_parameters
+  - vertical_parameter_alignment
+  - vertical_parameter_alignment_on_call
+  - explicit_init
   - explicit_acl
-  # - explicit_type_interface
 
-#included:
-#excluded:
-
-#analyzer_rules:
-analyzer_rules:
-  - unused_import
+disabled_rules:
+  - trailing_comma
+  - redundant_string_enum_value
+  - nesting
 
 force_cast: warning
 force_try: warning
 
-line_length:
-   warning: 120
-   error: 200
-   ignores_urls: false 
-   ignores_function_declarations: false
-   ignores_comments: false
-   ignores_interpolated_strings: false
-
-type_body_length:
-  - 300 # warning
-  - 400 # error
-file_length:
-  - 700
-  - 1200
+identifier_name:
+  max_length:
+    warning: 60
+    error: 80
 
 type_name:
-  min_length: 4
-  max_length:
-    - 40
-    - 50
-  excluded: iPhone
   allowed_symbols: ["_"]
-identifier_name:
-  min_length:
-    - 2
-  excluded:
-    - API_KEY
-
-indentation_width:
-  severity: warning
-  indentation_width: 2
-  include_comments: true
-  include_compiler_directives: true
-  include_multiline_strings: true
-
-reporter: "xcode"
-
-nesting:
-  type_level:
-    - 4
-    - 5
-  function_level: 2
 
 opening_brace:
-  ignore_multiline_function_signatures: true
-  ignore_multiline_type_headers: true
   ignore_multiline_statement_conditions: true
+  ignore_multiline_type_headers: true
+  ignore_multiline_function_signatures: true
 
-# explicit_type_interface:
-#   severity: warning
-#   allow_redundancy: true
+indentation_width:
+  indentation_width: 2
 
+reporter: "xcode"
